fix: the OpenSpec export is byte-identical across JVMs, not just within one
OpenSpecInput held requirementOwners as Map.copyOf, whose iteration order is
randomized PER JVM INSTANCE by design. design.md's Non-Goals list therefore
came out in a different order on every run:

    - R2, which `trading-platform-libs` covers in this change
    - R1, ...          vs.          - R3, R1, R2 on the next run

This is the second time Map.copyOf has done this in this feature — OpenSpecPlan
was the first. It is not cosmetic here. Idempotence rule 4 decides "ours,
unchanged" by byte comparison, so a non-deterministic export makes sdd see its
OWN output as differing on a --resume and, under rule 5, refuse to write
anything at all.

renderIsDeterministic() could not catch it: it renders twice in one JVM, where
the salt is fixed for the process lifetime. Catching it takes two separate JVMs
and a byte diff — which is how it was found, re-rendering a real run.

- requirementOwners is now unmodifiableMap(new LinkedHashMap<>(...)).
- Non-Goals render from a SORTED order rather than map order, so the output is
  canonical whatever the producer's order happens to be. compareItemIds orders
  R2 before R10, which plain string order gets backwards, and falls back to
  string order for any id shape sdd did not generate.

The new test asserts the sort, not insertion order, so it fails deterministically
against the old renderer rather than by salt luck. Verified beyond the test: 24
rendered files byte-identical across two separate JVMs.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>